# the_personality_trap

./: .gitignore  .yaml.example  AGENTS.md  LICENSE  Makefile  README.md  alembic.ini  dataset_description.md  docker-compose.yml  pyproject.toml
.codex/: codex-setup.sh
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py
docs/: ARCHITECTURE.md  DATABASE_BACKUP.md  README.md  USAGE.md
examples/: DATABASE_SCHEMA.md  QUICKSTART.md  README.md  evaluations_table1-3.ipynb  evaluations_table4.ipynb  evaluations_table5.ipynb  evaluations_table6.ipynb  evaluations_table_appendix_A4_A5.ipynb  evaluations_table_appendix_A6_A7.ipynb  example_config.yaml  personas_generation.ipynb  questionnaires_experiments.ipynb  questionnaires_validation.sql
scripts/: README.md  manage_schemas.py  manage_test_schemas.py  restore_database.sh  validate_config.py
src/evaluations/: __init__.py  data_access.py  table_accuracy.py  table_cronbach.py  table_demographics.py  table_personality.py
src/personas_backend/: __init__.py  persona_generator.py
src/personas_backend/cli/: __init__.py  persona_generation.py
src/personas_backend/core/: enums.py
src/personas_backend/db/: __init__.py  cleaning_and_maintenance.py  db_handler.py  experiment_groups.py  experiments.py  models.py  schema_config.py  session.py
src/personas_backend/evaluate_questionnaire/: __init__.py  registration.py  runner.py
src/personas_backend/models_providers/: aws_bedrock_client.py  models_config.py  models_utils.py  openai_client.py
src/personas_backend/personas_generation/: __init__.py  personas_generation.py
src/personas_backend/population/: population.py  random_population.py
src/personas_backend/questionnaire/: __init__.py  base_questionnaire.py  (+2 more)
tests/: README.md  conftest.py  test_bigfive_questionnaire.py  test_config_manager.py  test_db_handler.py  test_evaluate_registration.py  test_evaluate_runner.py  test_models_wrapper.py  test_persona_generation_modes.py  test_persona_generation_utils.py  test_pipeline_cli.py  test_readme_links.py
tools/: pipeline.py
(+10 files in other folders)
